Fix links not showing on mobile

--- a/src/components/NavBar/styles.module.css
+++ b/src/components/NavBar/styles.module.css
@@ -52,25 +52,29 @@
   color: #51DFE0;
 }
 
-
 @media(min-width: 900px) {
   .hamburger {
+    display: none;
+  }
+  .menu {
+    display: none;
+  }
+  .sideMenu {
+    display: none;
+  }
+  .overlay {
     display: none;
   }
 }
 
 @media(max-width: 899px) {
-  .navLinkDiv {
+  .links {
     display: none;
   }
 
   .ticker {
     flex-direction: column;
     align-items: flex-start;
-  }
-
-  .sideMenu {
-    display: none;
   }
 }
 
@@ -95,3 +99,4 @@
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
 }
+
